<resources>
    <string name="app_name">Peng</string>

    <string name="facebook_app_id">746478115480021</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_new_duel">NewDuelActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_duel">DuelActivity</string>
    <string name="title_activity_new_duel_friends">NewDuelFriendsActivity</string>
    <string name="title_activity_characters_pager">CharactersPagerActivity</string>
    <string name="title_activity_auth">AuthActivity</string>

    <string name="buttonStart">Start</string>
    <string name="textLabelCountdown">Countdown</string>
    <string name="textLabelHealthEnemy">1</string>
    <string name="textLabelHealthUser">1</string>
    <string name="textLabelX">X</string>
    <string name="textLabelY">Y</string>
    <string name="textLabelZ">Z</string>
    <string name="textLabelLoadedMagazineEnemy">Magazin</string>
    <string name="textLabelLoadedMagazineUser">Magazin</string>
    <string name="buttonOpenSensorActivity">Fight</string>
    <string name="textLabelProximity">P</string>

    <string name="toolbarTitleCharacter">Charakter</string>
    <string name="toastFailureMessage">ups, da ist was schief gegangen</string>
    <string name="toolbarTitleHighscore">Rangliste</string>
    <string name="toastNoMoreBullets">Keine Patronen mehr! Du musst Nachladen!</string>
    <string name="toastMagazineIsFull">Trommel ist voll! Schiess mal!</string>
    <string name="toolbarTitleSettings">Einstellungen</string>
    <string name="notificationContentTitleChallange">Du wurdest herausgefordert!</string>
    <string name="notificationContentTextChallangedBy">"Von "</string>
    <string name="toastOnBackPressedForExit">Press again for exit</string>
    <string name="toastYouCanNotFightYourself">Du kannst dich nicht selbst duellieren.</string>
    <string name="dialogTitlewhatIsBeingFought">Um was wird gespielt?</string>
    <string name="positiveButtonDemand">Fordern</string>
    <string name="negativeButtonCancel">abbrechen</string>
    <string name="dialogTitleEditUser">Edit your User</string>
    
    <string name="activityButtonNewDuel">Neues Duell</string>
    <string name="activityLabelOpenDuel">Offene Duelle</string>
    <string name="activityLabelNumberOfGames">Spiele</string>
    <string name="activityLabelRankingPlace">Ranking</string>
    <string name="activityLabelBetYour">fordere deine</string>
    <string name="activityLabelFriends">Freunde</string>
    <string name="activityLabelToChallange">zum Duell heraus.</string>
    <string name="activityLabelBetBy">fordere per</string>
    <string name="activityLabelRandom">Zufall</string>
    <string name="activityLabelBetAnOtherUser">einen anderen Spieler heraus.</string>
    <string name="activityLabelStatistic">Statistik</string>
    <string name="activityLabelLastGames">Letzte Spiele</string>
    <string name="activityButtonChallange">Herausfordern</string>
    <string name="activityLabelEdit">edit</string>
    <string name="activityLabelProfile">Profil</string>
    <string name="activityButtonEditProfile">Profil bearbeiten</string>
    <string name="activityButtonEditCharacter">Charakter aendern</string>
    <string name="activityLabelHowTo">How-to</string>
    <string name="activityButtonTutorial">Anleitung</string>
    <string name="activityLabelAccount">Account</string>
    <string name="activityButtonLogout">Ausloggen</string>
    <string name="activityLabelDeteleAccount">Account loeschen</string>
    <string name="dialogHintBet">Verlierer raeumt die Kueche auf!</string>
    <string name="dialogHintNick">Nick</string>
    <string name="dialogHintSlogan">Slogan</string>
    <string name="fragmentLabelCharacterPageNameText">Arzt</string>
    <string name="fragmentLabelCharacterPageDescription">„Seit er aufgrund einer Masern-Epidemie für vogelfrei erklärt wurde, verschrieb er sich eher unfreiwillig dem Kampf auf Leben und Tod.“</string>
    <string name="fragmentLabelSwipeToChange">swipe to change</string>
    <string name="toolbarTitleTutorial">Tutorial</string>
    <string name="toastWaitForOpponent">Wait for opponent.</string>
</resources>
