<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.yannickschuchmann.peng.app.views.activities.SettingsActivity">

    <com.yannickschuchmann.peng.app.views.components.BackToolBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTitle"
            />
    <LinearLayout
            android:orientation="vertical"
            android:paddingTop="?attr/actionBarSize"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <view android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              class="com.yannickschuchmann.peng.app.views.components.SectionHeadline" android:id="@+id/view1"
              custom:headlineText="@string/activityLabelProfile"
              android:layout_gravity="center_horizontal"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <view android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  class="com.yannickschuchmann.peng.app.views.components.LinkButton" android:id="@+id/edit_profil"
                  custom:ButtonText="@string/activityButtonEditProfile"
                  android:layout_gravity="center_horizontal"/>
            <view android:layout_width="fill_parent"
                  android:layout_height="69dp"
                  class="com.yannickschuchmann.peng.app.views.components.LinkButton" android:id="@+id/edit_character"
                  custom:ButtonText="@string/activityButtonEditCharacter"
                  android:layout_gravity="center_horizontal"/>

        </LinearLayout>

        <view
            class="com.yannickschuchmann.peng.app.views.components.SectionHeadline"
            custom:headlineText="@string/activityLabelHowTo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/How_to_label"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

        </view>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="62dp">

            <view android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                class="com.yannickschuchmann.peng.app.views.components.LinkButton"
                android:id="@+id/instructions"
                custom:ButtonText="@string/activityButtonTutorial"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <view android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              class="com.yannickschuchmann.peng.app.views.components.SectionHeadline" android:id="@+id/view2"
              custom:headlineText="@string/activityLabelAccount"
              android:layout_gravity="center_horizontal"/>

        <view
            class="com.yannickschuchmann.peng.app.views.components.LinkButton"
            custom:ButtonText="@string/activityButtonLogout"
            android:layout_width="fill_parent"
            android:layout_height="63dp"
            android:id="@+id/logoutButton"
            android:layout_gravity="center_horizontal" >

        </view>

        <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/activityLabelDeteleAccount"
                android:textAllCaps="true"
                android:id="@+id/textView10" android:layout_gravity="center_horizontal" android:gravity="center"
                android:paddingTop="15dp" android:paddingBottom="15dp" android:textColor="@color/theme_primary"
                android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>


</RelativeLayout>
