<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.yannickschuchmann.peng.app.views.activities.NewDuelActivity">
    <com.yannickschuchmann.peng.app.views.components.BackToolBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbarTitle"
            />
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="?attr/actionBarSize"
            android:layout_centerHorizontal="true" android:layout_alignParentTop="true">
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_weight="1" android:background="@color/theme_accent" android:id="@+id/duel_friends">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" android:gravity="center"
                    android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_gravity="center_vertical">
                <ImageView
                        android:layout_width="102dp"
                        android:layout_height="110dp"
                        android:id="@+id/imageView2" android:layout_gravity="center"
                        android:src="@drawable/heart" android:layout_marginRight="10dp"/>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" android:gravity="center_vertical">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/activityLabelBetYour"
                            android:id="@+id/textView2" android:textColor="@color/theme_text_light"
                            android:textSize="17dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/activityLabelFriends"
                            android:id="@+id/textView4" android:textColor="@color/theme_text_light"
                            android:textSize="42dp"
                            android:textAllCaps="true"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceSmall"
                              android:text="@string/activityLabelToChallange"
                              android:id="@+id/textView6" android:textColor="@color/theme_text_light"
                              android:textSize="17dp"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
                android:layout_weight="1" android:background="@color/theme_accent_blue" android:id="@+id/duel_random">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent"
                          android:layout_height="wrap_content" android:gravity="center" android:paddingLeft="20dp"
                          android:paddingRight="20dp" android:layout_gravity="center_vertical">
                <ImageView android:layout_width="102dp" android:layout_height="110dp" android:id="@+id/imageView3"
                           android:layout_gravity="center" android:src="@drawable/cube_with_hole"
                           android:layout_marginRight="10dp"/>
                <LinearLayout android:orientation="vertical" android:layout_width="fill_parent"
                              android:layout_height="fill_parent" android:gravity="center_vertical">
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceSmall" android:text="@string/activityLabelBetBy"
                              android:id="@+id/textView7" android:textColor="@color/theme_text_light"
                              android:textSize="17dp"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceLarge" android:text="@string/activityLabelRandom"
                              android:id="@+id/textView8" android:textColor="@color/theme_text_light"
                              android:textSize="42dp" android:textAllCaps="true"/>
                    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                              android:textAppearance="?android:attr/textAppearanceSmall"
                              android:text="@string/activityLabelBetAnOtherUser" android:id="@+id/textView9"
                              android:textColor="@color/theme_text_light" android:textSize="17dp"/>
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</RelativeLayout>
